# Taxi_demand_predictor

./: README.md  pyproject.toml
.github/workflows/: feature_pipeline.yaml
data/: taxi+_zone_lookup.csv
notebooks/: feature_pipeline.ipynb  load_and_validate_data.ipynb  model_deployment.ipynb  models.ipynb
src/: config.py  data.py  inference.py  plot.py
