[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Noah Kader <noahkader.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
xgboost = "^1.7.6"
plotly = "^5.15.0"
requests = "^2.31.0"
pandas = ">=1.2.0,<2.0.0"
tqdm = "^4.65.0"
nbformat = "^5.9.1"
numpy = "^1.25.1"
scikit-learn = "^1.3.0"
lightgbm = "^4.0.0"
pathlib = "^1.0.1"
optuna = "^3.2.0"
python-dotenv = "^1.0.0"
setuptools = "^68.0.0"
hopsworks = "3.2.0"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"